@@ -645,13 +645,16 @@ void ClusterFeature::start() {
   AsyncAgencyCommManager::INSTANCE->setSkipScheduler(false);
   ServerState::instance()->setState(ServerState::STATE_SERVING);
 
+#ifdef USE_ENTERPRISE
   // If we are on a coordinator, we want to have a callback which is called
   // whenever a hotbackup restore is done:
   if (role == ServerState::ROLE_COORDINATOR) {
     auto hotBackupRestoreDone = [this](VPackSlice const& result) -> bool {
-      LOG_TOPIC("12636", INFO, Logger::BACKUP) << "Got a hotbackup restore "
-        "event, getting new cluster-wide unique IDs...";
-      this->_clusterInfo->uniqid(1000000);
+      if (!server().isStopping()) {
+        LOG_TOPIC("12636", INFO, Logger::BACKUP) << "Got a hotbackup restore "
+          "event, getting new cluster-wide unique IDs...";
+        this->_clusterInfo->uniqid(1000000);
+      }
       return true;
     };
     _hotbackupRestoreCallback =
@@ -664,6 +667,7 @@ void ClusterFeature::start() {
            "to problems after a restore!";
     }
   }
+#endif
 }
 
 void ClusterFeature::beginShutdown() {
@@ -685,10 +689,14 @@ void ClusterFeature::stop() {
     return;
   }
 
-  if (!_agencyCallbackRegistry->unregisterCallback(_hotbackupRestoreCallback)) {
-    LOG_TOPIC("84152", INFO, Logger::BACKUP) << "Strange, we could not "
-      "unregister the hotbackup restore callback.";
+#ifdef USE_ENTERPRISE
+  if (_hotbackupRestoreCallback != nullptr) {
+    if (!_agencyCallbackRegistry->unregisterCallback(_hotbackupRestoreCallback)) {
+      LOG_TOPIC("84152", DEBUG, Logger::BACKUP) << "Strange, we could not "
+        "unregister the hotbackup restore callback.";
+    }
   }
+#endif
 
   shutdownHeartbeatThread();
 
